--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/drawer": "^7.7.11",
     "@react-navigation/native": "^7.1.8",
     "clsx": "^2.1.1",
     "expo": "~54.0.31",
