--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,38 +1,45 @@
 project:
-  name: "visual-redesign-i18n"
+  name: "supabase-authentication"
   scale: LARGE
-  started: "2026-01-20T19:11:29.769Z"
-  current_phase: E
+  started: "2026-01-21T12:36:29.314Z"
+  current_phase: C
 
 phases:
   P:
-    status: completed
-    started_at: "2026-01-20T19:11:29.769Z"
-    completed_at: "2026-01-20T19:12:23.710Z"
+    status: filled
+    started_at: "2026-01-21T12:36:29.314Z"
+    completed_at: "2026-01-21T12:42:29.328Z"
   R:
-    status: completed
-    started_at: "2026-01-20T19:12:23.715Z"
-    completed_at: "2026-01-20T19:12:29.964Z"
+    status: filled
+    started_at: "2026-01-21T12:42:29.332Z"
+    completed_at: "2026-01-21T12:42:48.090Z"
   E:
-    status: in_progress
-    started_at: "2026-01-20T19:12:29.969Z"
+    status: filled
+    started_at: "2026-01-21T12:42:48.094Z"
+    completed_at: "2026-01-21T12:46:50.849Z"
   V:
-    status: pending
+    status: filled
+    started_at: "2026-01-21T12:46:50.854Z"
+    completed_at: "2026-01-21T12:47:44.951Z"
   C:
-    status: pending
+    status: completed
+    started_at: "2026-01-21T12:47:44.954Z"
+    completed_at: "2026-01-21T12:47:55.890Z"
+    outputs:
+      - path: "implementation-complete"
+        status: filled
+      - path: "documentation-updated"
+        status: filled
 
 execution:
   history:
-    - timestamp: "2026-01-20T19:12:29.969Z"
-      phase: E
-      action: started
-  last_activity: "2026-01-20T19:12:29.969Z"
-  resume_context: "Fase E (Execução) em progresso"
+    - timestamp: "2026-01-21T12:47:55.890Z"
+      phase: C
+      action: completed
+  last_activity: "2026-01-21T12:47:55.890Z"
+  resume_context: "Fase C (Confirmação) concluída"
 
 approval:
   plan_created: true
-  plan_approved: true
-  approved_by: "architect"
-  approved_at: "2026-01-20T19:12:29.937Z"
-  approval_notes: "Plano alinhado com os requisitos de UI moderna e i18n para escalabilidade. Design Liquid Glass e Material 3 aprovados."
+  plan_approved: false
 
