--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-EXPO_PUBLIC_GEMINI_API_KEY=INCLUA SUA API KEY AQUI
+# Gemini AI
+EXPO_PUBLIC_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Supabase
+EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+EXPO_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
