--- a/app.json
+++ b/app.json
@@ -15,7 +15,15 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.celolopes.finainteli"
+      "bundleIdentifier": "com.celolopes.finainteli",
+      "usesAppleSignIn": true,
+      "infoPlist": {
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": ["finainteli"]
+          }
+        ]
+      }
     },
     "android": {
       "package": "com.celolopes.finainteli",
@@ -24,14 +32,31 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "finainteli"
+            },
+            {
+              "scheme": "https",
+              "host": "enqzhsncukrmcrsubcvm.supabase.co",
+              "pathPrefix": "/auth/v1/callback"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-localization"],
+    "plugins": ["expo-router", "expo-localization", "expo-apple-authentication", "expo-secure-store"],
     "experiments": {
       "typedRoutes": true
     }
