feat: Implementado toda reestrutura do app com Monetização

--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,43 +1,40 @@
 project:
-  name: "supabase-authentication"
+  name: "dashboard-redesign-financial-database"
   scale: LARGE
-  started: "2026-01-21T12:36:29.314Z"
-  current_phase: C
+  started: "2026-01-21T15:05:40.172Z"
+  current_phase: V
 
 phases:
   P:
     status: filled
-    started_at: "2026-01-21T12:36:29.314Z"
-    completed_at: "2026-01-21T12:42:29.328Z"
+    started_at: "2026-01-21T15:05:40.172Z"
+    completed_at: "2026-01-21T15:05:56.442Z"
   R:
-    status: filled
-    started_at: "2026-01-21T12:42:29.332Z"
-    completed_at: "2026-01-21T12:42:48.090Z"
+    status: completed
+    started_at: "2026-01-21T15:05:56.446Z"
+    completed_at: "2026-01-21T15:06:03.718Z"
   E:
     status: filled
-    started_at: "2026-01-21T12:42:48.094Z"
-    completed_at: "2026-01-21T12:46:50.849Z"
+    started_at: "2026-01-21T15:06:03.722Z"
+    completed_at: "2026-01-21T15:10:28.186Z"
   V:
-    status: filled
-    started_at: "2026-01-21T12:46:50.854Z"
-    completed_at: "2026-01-21T12:47:44.951Z"
+    status: in_progress
+    started_at: "2026-01-21T15:10:28.195Z"
   C:
-    status: completed
-    started_at: "2026-01-21T12:47:44.954Z"
-    completed_at: "2026-01-21T12:47:55.890Z"
-    outputs:
-      - path: "implementation-complete"
-        status: filled
-      - path: "documentation-updated"
-        status: filled
+    status: pending
 
 execution:
   history:
-    - timestamp: "2026-01-21T12:47:55.890Z"
-      phase: C
-      action: completed
-  last_activity: "2026-01-21T12:47:55.890Z"
-  resume_context: "Fase C (Confirmação) concluída"
+    - timestamp: "2026-01-21T15:10:28.195Z"
+      phase: V
+      action: started
+  last_activity: "2026-01-21T15:10:28.195Z"
+  resume_context: "Fase V (Validação) em progresso"
+
+settings:
+  autonomous_mode: false
+  require_plan: true
+  require_approval: false
 
 approval:
   plan_created: true
