--- a/app.json
+++ b/app.json
@@ -21,9 +21,6 @@
         "CFBundleURLTypes": [
           {
             "CFBundleURLSchemes": ["finainteli"]
-          },
-          {
-            "CFBundleURLSchemes": ["finainteli"]
           }
         ],
         "ITSAppUsesNonExemptEncryption": false
@@ -33,7 +30,7 @@
       "package": "com.celolopes.finainteli",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#000000"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
@@ -83,6 +80,12 @@
       "eas": {
         "projectId": "3a52d1b9-36d5-4bfd-9637-2313f3687397"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/3a52d1b9-36d5-4bfd-9637-2313f3687397"
     }
   }
 }
