feat: implement offline sync with WatermelonDB and add budget notifications
- Add WatermelonDB local database with models for transactions, categories, accounts, budgets, and credit cards
- Implement bidirectional sync between local database and Supabase backend
- Add offline mode banner and sync indicator UI components
- Integrate budget monitoring and notification system with user preferences
- Update app icons and mark design task as completed
- Add Babel decorator plugins and TypeScript experimental decorator support for WatermelonDB
- Enhance EAS build configuration with auto-increment for preview builds
- Extend i18n translations for offline mode and CSV export
- Add Jest setup for testing with mocked dependencies
- Refactor transaction detail screen to use local database models
- Fix TypeScript issues in ExternalLink component and update auth store to clear local database on logout

--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,39 +1,38 @@
 project:
-  name: "design-app-icons"
+  name: "offline-sync"
   scale: LARGE
-  started: "2026-01-23T13:20:09.926Z"
-  current_phase: C
+  started: "2026-01-23T14:52:04.949Z"
+  current_phase: E
 
 phases:
   P:
     status: filled
-    started_at: "2026-01-23T13:20:09.926Z"
-    completed_at: "2026-01-23T13:20:54.207Z"
+    started_at: "2026-01-23T14:52:04.949Z"
+    completed_at: "2026-01-23T14:53:07.221Z"
   R:
     status: filled
-    started_at: "2026-01-23T13:20:54.214Z"
-    completed_at: "2026-01-23T13:22:36.696Z"
+    started_at: "2026-01-23T14:53:07.231Z"
+    completed_at: "2026-01-23T15:03:25.175Z"
   E:
-    status: filled
-    started_at: "2026-01-23T13:22:36.700Z"
-    completed_at: "2026-01-23T13:24:26.501Z"
-  V:
-    status: filled
-    started_at: "2026-01-23T13:24:26.505Z"
-    completed_at: "2026-01-23T13:24:43.226Z"
-  C:
     status: in_progress
-    started_at: "2026-01-23T13:24:43.230Z"
+    started_at: "2026-01-23T15:03:25.206Z"
+  V:
+    status: pending
+  C:
+    status: pending
 
 execution:
   history:
-    - timestamp: "2026-01-23T13:24:43.230Z"
-      phase: C
+    - timestamp: "2026-01-23T15:03:25.206Z"
+      phase: E
       action: started
-  last_activity: "2026-01-23T13:24:43.230Z"
-  resume_context: "Fase C (Confirmação) em progresso"
+  last_activity: "2026-01-23T15:03:25.206Z"
+  resume_context: "Fase E (Execução) em progresso"
 
 approval:
   plan_created: true
-  plan_approved: false
+  plan_approved: true
+  approved_by: "architect"
+  approved_at: "2026-01-23T15:03:10.751Z"
+  approval_notes: "Plan reviewed and architecture ADR documented. Strategy based on WatermelonDB is solid for this scale."
 
