chore(eas): add ascAppId for iOS preview and production submissions
Configure the Apple App Store Connect App ID for both preview and production iOS builds to enable EAS submit workflows.

--- a/eas.json
+++ b/eas.json
@@ -25,7 +25,15 @@
     }
   },
   "submit": {
-    "preview": {},
-    "production": {}
+    "preview": {
+      "ios": {
+        "ascAppId": "6758100638"
+      }
+    },
+    "production": {
+      "ios": {
+        "ascAppId": "6758100638"
+      }
+    }
   }
 }
