--- a/app.json
+++ b/app.json
@@ -8,11 +8,6 @@
     "scheme": "finainteli",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.celolopes.finainteli",
@@ -85,6 +80,7 @@
       "policy": "appVersion"
     },
     "updates": {
+      "enabled": false,
       "url": "https://u.expo.dev/3a52d1b9-36d5-4bfd-9637-2313f3687397"
     }
   }
