--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
-    "@nozbe/watermelondb": "^0.25.5",
+    "@nozbe/watermelondb": "^0.28.0",
     "@nozbe/with-observables": "^1.6.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^7.1.8",
     "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.91.0",
+    "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "expo": "~54.0.32",
     "expo-apple-authentication": "^8.0.8",
@@ -66,6 +67,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0",
     "victory": "^37.3.6",
     "victory-native": "^41.20.2",
     "zod": "^4.3.5",
