feat: Ajustes gerais no aplicativo que resolve diversos problemas, além de inclusão de fatura de cartão de crédito.

--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,38 +1,47 @@
 project:
-  name: "offline-sync"
+  name: "credit-card-details"
   scale: LARGE
-  started: "2026-01-23T14:52:04.949Z"
-  current_phase: E
+  started: "2026-01-29T19:42:41.129Z"
+  current_phase: C
 
 phases:
   P:
-    status: filled
-    started_at: "2026-01-23T14:52:04.949Z"
-    completed_at: "2026-01-23T14:53:07.221Z"
+    status: completed
+    started_at: "2026-01-29T19:42:41.129Z"
+    completed_at: "2026-01-29T19:43:18.882Z"
   R:
-    status: filled
-    started_at: "2026-01-23T14:53:07.231Z"
-    completed_at: "2026-01-23T15:03:25.175Z"
+    status: completed
+    started_at: "2026-01-29T19:43:18.887Z"
+    completed_at: "2026-01-29T19:43:34.007Z"
   E:
-    status: in_progress
-    started_at: "2026-01-23T15:03:25.206Z"
+    status: completed
+    started_at: "2026-01-29T19:43:34.011Z"
+    completed_at: "2026-01-29T19:45:30.894Z"
   V:
-    status: pending
+    status: completed
+    started_at: "2026-01-29T19:45:30.899Z"
+    completed_at: "2026-01-29T19:45:39.301Z"
   C:
-    status: pending
+    status: in_progress
+    started_at: "2026-01-29T19:45:39.306Z"
 
 execution:
   history:
-    - timestamp: "2026-01-23T15:03:25.206Z"
-      phase: E
-      action: started
-  last_activity: "2026-01-23T15:03:25.206Z"
-  resume_context: "Fase E (Execução) em progresso"
+    - timestamp: "2026-01-29T20:08:00.026Z"
+      phase: C
+      action: step_completed
+      plan: "feature-transaction-options"
+      planPhase: "E"
+      stepIndex: 1
+      stepDescription: "Step 1"
+      notes: "Implemented UI for Installments and Recurrence in 'add-transaction.tsx'. Added 'createComplexTransaction' in 'FinancialService' to handle batch generation. Fixed lint errors."
+  last_activity: "2026-01-29T20:08:00.026Z"
+  resume_context: "Concluído: Step 1"
 
 approval:
   plan_created: true
   plan_approved: true
   approved_by: "architect"
-  approved_at: "2026-01-23T15:03:10.751Z"
-  approval_notes: "Plan reviewed and architecture ADR documented. Strategy based on WatermelonDB is solid for this scale."
+  approved_at: "2026-01-29T19:43:29.660Z"
+  approval_notes: "Plan is solid. Proceed to implementation."
 
