--- a/app.json
+++ b/app.json
@@ -15,10 +15,13 @@
       "infoPlist": {
         "CFBundleURLTypes": [
           {
-            "CFBundleURLSchemes": ["finainteli"]
+            "CFBundleURLSchemes": [
+              "finainteli"
+            ]
           }
         ],
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSFaceIDUsageDescription": "Precisamos do Face ID para desbloquear o aplicativo com segurança."
       }
     },
     "android": {
@@ -43,7 +46,10 @@
               "pathPrefix": "/auth/v1/callback"
             }
           ],
-          "category": ["BROWSABLE", "DEFAULT"]
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
         }
       ]
     },
@@ -65,7 +71,8 @@
           "defaultChannel": "budget-alerts",
           "sounds": []
         }
-      ]
+      ],
+      "@react-native-community/datetimepicker"
     ],
     "experiments": {
       "typedRoutes": true
