--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nozbe/watermelondb": "^0.28.0",
     "@nozbe/with-observables": "^1.6.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/native": "^7.1.8",
@@ -38,6 +39,7 @@
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-local-authentication": "~17.0.8",
     "expo-localization": "~17.0.8",
     "expo-notifications": "~0.32.16",
     "expo-print": "~15.0.8",
