feat: Implement comprehensive transaction management, including add, view, edit, list, and filter functionalities, alongside authentication and reporting.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^2.91.0",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.32",
     "expo-apple-authentication": "^8.0.8",
     "expo-auth-session": "^7.0.10",
