chore(plan): complete Implementation for ai-usage-tracking

--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,47 +1,42 @@
 project:
-  name: "credit-card-details"
+  name: "ai-usage-tracking-dashboard"
   scale: LARGE
-  started: "2026-01-29T19:42:41.129Z"
+  started: "2026-01-30T17:40:15.511Z"
   current_phase: C
 
 phases:
   P:
-    status: completed
-    started_at: "2026-01-29T19:42:41.129Z"
-    completed_at: "2026-01-29T19:43:18.882Z"
+    status: filled
+    started_at: "2026-01-30T17:40:15.511Z"
+    completed_at: "2026-01-30T17:45:18.120Z"
   R:
     status: completed
-    started_at: "2026-01-29T19:43:18.887Z"
-    completed_at: "2026-01-29T19:43:34.007Z"
+    started_at: "2026-01-30T17:45:18.125Z"
+    completed_at: "2026-01-30T17:45:24.111Z"
   E:
-    status: completed
-    started_at: "2026-01-29T19:43:34.011Z"
-    completed_at: "2026-01-29T19:45:30.894Z"
+    status: filled
+    started_at: "2026-01-30T17:45:24.115Z"
+    completed_at: "2026-01-30T17:52:03.946Z"
   V:
-    status: completed
-    started_at: "2026-01-29T19:45:30.899Z"
-    completed_at: "2026-01-29T19:45:39.301Z"
+    status: filled
+    started_at: "2026-01-30T17:52:03.951Z"
+    completed_at: "2026-01-30T17:56:01.200Z"
   C:
     status: in_progress
-    started_at: "2026-01-29T19:45:39.306Z"
+    started_at: "2026-01-30T17:56:01.205Z"
 
 execution:
   history:
-    - timestamp: "2026-01-29T20:08:00.026Z"
+    - timestamp: "2026-01-30T17:56:01.205Z"
       phase: C
-      action: step_completed
-      plan: "feature-transaction-options"
-      planPhase: "E"
-      stepIndex: 1
-      stepDescription: "Step 1"
-      notes: "Implemented UI for Installments and Recurrence in 'add-transaction.tsx'. Added 'createComplexTransaction' in 'FinancialService' to handle batch generation. Fixed lint errors."
-  last_activity: "2026-01-29T20:08:00.026Z"
-  resume_context: "Concluído: Step 1"
+      action: started
+  last_activity: "2026-01-30T17:56:01.205Z"
+  resume_context: "Fase C (Confirmação) em progresso"
 
 approval:
   plan_created: true
   plan_approved: true
   approved_by: "architect"
-  approved_at: "2026-01-29T19:43:29.660Z"
-  approval_notes: "Plan is solid. Proceed to implementation."
+  approved_at: "2026-01-30T17:45:21.701Z"
+  approval_notes: "Plan updated based on user feedback regarding Supabase sync, secret flag, and Gemini 3 Flash model retention."
 
