feat: Initialize Finainteli application with core financial management features, AI services, and comprehensive development infrastructure.

--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,42 +1,39 @@
 project:
-  name: "ai-usage-tracking-dashboard"
-  scale: LARGE
-  started: "2026-01-30T17:40:15.511Z"
-  current_phase: C
+  name: "UX Audit Fixes2"
+  scale: MEDIUM
+  started: "2026-01-30T18:02:52.688Z"
+  current_phase: E
 
 phases:
   P:
     status: filled
-    started_at: "2026-01-30T17:40:15.511Z"
-    completed_at: "2026-01-30T17:45:18.120Z"
+    started_at: "2026-01-30T18:02:52.688Z"
+    completed_at: "2026-01-30T18:03:17.932Z"
   R:
     status: completed
-    started_at: "2026-01-30T17:45:18.125Z"
-    completed_at: "2026-01-30T17:45:24.111Z"
+    started_at: "2026-01-30T18:03:17.936Z"
+    completed_at: "2026-01-30T18:03:28.664Z"
   E:
-    status: filled
-    started_at: "2026-01-30T17:45:24.115Z"
-    completed_at: "2026-01-30T17:52:03.946Z"
-  V:
-    status: filled
-    started_at: "2026-01-30T17:52:03.951Z"
-    completed_at: "2026-01-30T17:56:01.200Z"
-  C:
     status: in_progress
-    started_at: "2026-01-30T17:56:01.205Z"
+    started_at: "2026-01-30T18:03:28.668Z"
+  V:
+    status: pending
+  C:
+    status: skipped
+    reason: "Not required for scale MEDIUM"
 
 execution:
   history:
-    - timestamp: "2026-01-30T17:56:01.205Z"
-      phase: C
+    - timestamp: "2026-01-30T18:03:28.668Z"
+      phase: E
       action: started
-  last_activity: "2026-01-30T17:56:01.205Z"
-  resume_context: "Fase C (Confirmação) em progresso"
+  last_activity: "2026-01-30T18:03:28.668Z"
+  resume_context: "Fase E (Execução) em progresso"
 
 approval:
   plan_created: true
   plan_approved: true
   approved_by: "architect"
-  approved_at: "2026-01-30T17:45:21.701Z"
-  approval_notes: "Plan updated based on user feedback regarding Supabase sync, secret flag, and Gemini 3 Flash model retention."
+  approved_at: "2026-01-30T18:03:25.563Z"
+  approval_notes: "Plan is comprehensive and addresses all UX Audit critical issues. Proceeding to Execution."
 
