chore: Update Expo dependencies and configure Android release status for EAS production builds.

--- a/eas.json
+++ b/eas.json
@@ -35,6 +35,9 @@
     "production": {
       "ios": {
         "ascAppId": "6758100638"
+      },
+      "android": {
+        "releaseStatus": "draft"
       }
     }
   }
