--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.32",
+    "expo": "~54.0.33",
     "expo-apple-authentication": "^8.0.8",
     "expo-auth-session": "^7.0.10",
     "expo-blur": "~15.0.8",
@@ -45,7 +45,7 @@
     "expo-localization": "~17.0.8",
     "expo-notifications": "~0.32.16",
     "expo-print": "~15.0.8",
-    "expo-router": "~6.0.22",
+    "expo-router": "~6.0.23",
     "expo-secure-store": "^15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
@@ -81,7 +81,7 @@
     "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
     "jest": "^29.7.0",
-    "jest-expo": "^54.0.16",
+    "jest-expo": "~54.0.17",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
