feat: add Sentry integration and improve credit card invoice calculations
- Add Sentry for error tracking and performance monitoring with automatic sourcemap upload for EAS Build
- Implement unified credit card invoice calculation utility with proper handling of income/expense transactions
- Fix lock screen biometric authentication to trigger when app becomes active
- Improve chat screen layout to account for bottom tab bar and dynamic input height
- Group transactions by date in card details view for better readability
- Add .env.local to gitignore for local environment variables
- Update README with Sentry configuration instructions

--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
       "infoPlist": {
         "CFBundleURLTypes": [
           {
-            "CFBundleURLSchemes": ["finainteli"]
+            "CFBundleURLSchemes": [
+              "finainteli"
+            ]
           }
         ],
         "ITSAppUsesNonExemptEncryption": false,
@@ -44,7 +46,10 @@
               "pathPrefix": "/auth/v1/callback"
             }
           ],
-          "category": ["BROWSABLE", "DEFAULT"]
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
         }
       ]
     },
@@ -72,6 +77,14 @@
         "expo-image-picker",
         {
           "photosPermission": "O app precisa de acesso para você escolher sua foto de perfil."
+        }
+      ],
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "finainteli",
+          "organization": "marcelo-lopes-gw"
         }
       ]
     ],
