--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "sentry:upload-sourcemaps": "npx sentry-expo-upload-sourcemaps dist"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -23,6 +24,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/native": "^7.1.8",
+    "@sentry/react-native": "^7.11.0",
     "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.91.0",
     "@types/uuid": "^10.0.0",
