--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "create-build": "node scripts/create-build.js",
+    "update-build": "node scripts/update-build.js",
     "test": "jest",
     "sentry:upload-sourcemaps": "npx sentry-expo-upload-sourcemaps dist"
   },
