--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-i18next": "^16.5.3",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.73",
     "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.14.5",
     "react-native-purchases": "^9.7.1",
@@ -76,6 +77,7 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.4.0",
+    "use-count-up": "^3.0.1",
     "uuid": "^13.0.0",
     "victory": "^37.3.6",
     "victory-native": "^41.20.2",
