--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.28.6",
     "@babel/plugin-transform-runtime": "^7.28.5",
-    "@callstack/liquid-glass": "^0.7.0",
+    "@bottom-tabs/react-navigation": "^1.1.0",
     "@expo/vector-icons": "^15.0.3",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
@@ -64,6 +64,7 @@
     "react-hook-form": "^7.70.0",
     "react-i18next": "^16.5.3",
     "react-native": "0.81.5",
+    "react-native-bottom-tabs": "^1.1.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.73",
     "react-native-markdown-display": "^7.0.2",
