--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,38 +1,39 @@
 project:
-  name: "premium-sandbox-bypass"
+  name: "finainteli-bugfix-improvements"
   scale: LARGE
-  started: "2026-02-04T13:39:20.921Z"
-  current_phase: E
+  started: "2026-02-05T12:49:15.289Z"
+  current_phase: C
 
 phases:
   P:
     status: filled
-    started_at: "2026-02-04T13:39:20.921Z"
-    completed_at: "2026-02-04T14:18:02.246Z"
+    started_at: "2026-02-05T12:49:15.289Z"
+    completed_at: "2026-02-05T12:59:57.338Z"
   R:
-    status: completed
-    started_at: "2026-02-04T14:18:02.264Z"
-    completed_at: "2026-02-04T14:57:53.182Z"
+    status: filled
+    started_at: "2026-02-05T12:59:57.342Z"
+    completed_at: "2026-02-05T13:00:01.232Z"
   E:
-    status: in_progress
-    started_at: "2026-02-04T14:57:53.196Z"
+    status: completed
+    started_at: "2026-02-05T13:00:01.235Z"
+    completed_at: "2026-02-05T13:12:22.732Z"
   V:
-    status: pending
+    status: completed
+    started_at: "2026-02-05T13:12:22.737Z"
+    completed_at: "2026-02-05T13:22:38.898Z"
   C:
-    status: pending
+    status: in_progress
+    started_at: "2026-02-05T13:22:38.902Z"
 
 execution:
   history:
-    - timestamp: "2026-02-04T14:57:53.196Z"
-      phase: E
+    - timestamp: "2026-02-05T13:22:38.902Z"
+      phase: C
       action: started
-  last_activity: "2026-02-04T14:57:53.196Z"
-  resume_context: "Fase E (Execução) em progresso"
+  last_activity: "2026-02-05T13:22:38.902Z"
+  resume_context: "Fase C (Confirmação) em progresso"
 
 approval:
   plan_created: true
-  plan_approved: true
-  approved_by: "reviewer"
-  approved_at: "2026-02-04T14:57:48.719Z"
-  approval_notes: "Plan reviewed; environment bypass signals and RevenueCat listener approach are acceptable."
+  plan_approved: false
 
