(feat and fix) Ajustes gerais no design, criação de novo AnimatedSplash e correções

--- a/app.json
+++ b/app.json
@@ -58,6 +58,7 @@
       "expo-localization",
       "expo-apple-authentication",
       "expo-secure-store",
+      ["react-native-bottom-tabs", { "theme": "material3-expressive" }],
       [
         "expo-notifications",
         {
