--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native": "0.81.5",
     "react-native-bottom-tabs": "^1.1.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-charts": "^1.4.73",
     "react-native-markdown-display": "^7.0.2",
     "react-native-paper": "^5.14.5",
