--- a/.context/workflow/status.yaml
+++ b/.context/workflow/status.yaml
@@ -1,39 +1,31 @@
 project:
-  name: "finainteli-bugfix-improvements"
+  name: "Category Management"
   scale: LARGE
-  started: "2026-02-05T12:49:15.289Z"
-  current_phase: C
+  started: "2026-02-06T15:59:14.576Z"
+  current_phase: E
 
 phases:
   P:
     status: filled
-    started_at: "2026-02-05T12:49:15.289Z"
-    completed_at: "2026-02-05T12:59:57.338Z"
+    started_at: "2026-02-06T15:59:14.575Z"
+    completed_at: "2026-02-06T16:02:42.730Z"
   R:
     status: filled
-    started_at: "2026-02-05T12:59:57.342Z"
-    completed_at: "2026-02-05T13:00:01.232Z"
+    started_at: "2026-02-06T16:02:42.739Z"
+    completed_at: "2026-02-06T16:03:18.245Z"
   E:
-    status: completed
-    started_at: "2026-02-05T13:00:01.235Z"
-    completed_at: "2026-02-05T13:12:22.732Z"
-  V:
-    status: completed
-    started_at: "2026-02-05T13:12:22.737Z"
-    completed_at: "2026-02-05T13:22:38.898Z"
-  C:
     status: in_progress
-    started_at: "2026-02-05T13:22:38.902Z"
+    started_at: "2026-02-06T16:03:18.258Z"
+  V:
+    status: pending
+  C:
+    status: pending
 
 execution:
   history:
-    - timestamp: "2026-02-05T13:22:38.902Z"
-      phase: C
+    - timestamp: "2026-02-06T16:03:18.258Z"
+      phase: E
       action: started
-  last_activity: "2026-02-05T13:22:38.902Z"
-  resume_context: "Fase C (Confirmação) em progresso"
-
-approval:
-  plan_created: true
-  plan_approved: false
+  last_activity: "2026-02-06T16:03:18.258Z"
+  resume_context: "Fase E (Execução) em progresso"
 
