--- a/app.json
+++ b/app.json
@@ -98,7 +98,9 @@
       "policy": "appVersion"
     },
     "updates": {
-      "enabled": false,
+      "enabled": true,
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/3a52d1b9-36d5-4bfd-9637-2313f3687397"
     }
   }
